--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "@tanstack/react-query": "^5.8.7",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
@@ -25,6 +30,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
+    "react-ts-typewriter": "^0.1.8-b",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
